2011-10-22  Araki Ken  <arakiken@users.sf.net>

	* ml_pty.c: Minor fixes for win32 native.

2011-10-21  Araki Ken  <arakiken@users.sf.net>

	* x_term_manager.c: "version" varaible was freed unjustly in
	  x_term_manager_final() and mlterm@cygwin was prevented from exiting
	  normally. So "version" variable and so on is removed.
	  (Thanks to Iwamoto Kouichi san)

2011-10-21  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  - x_window_set_transparent(terminal->pvt->screen) is called if
	    GdkWindow of VteTerminal is re-configured.
	  - If envv argument of vte_terminal_fork_command(_full) and
	    vte_terminal_forkpty is NULL, TERM, WINDOWID, DISPLAY and COLORFGBG
	    environmental variables are set for a child process.

2011-10-19  Araki Ken  <arakiken@users.sf.net>

	* vte.c:
	  - Almost all parts of code in vte_terminal_unrealize() is moved to
	    vte_terminal_finalize().
	  - Dummy x_screen_t is created before x_display_remove_root() in
	    vte_terminal_unrealize() in case terminal will be realized again.

	* xwindow.[ch]: x_window_hide() is added.

	* gtk/Makefile.in, configure.in: Name of libvte using gtk+-3.0 is libvte2_90.

2011-10-17  Araki Ken  <arakiken@users.sf.net>

	* vte.c: pty_list and open_pty of x_system_event_listener_t are
	  implemented for mlterm-menu.

	* ml_term_manager.c, mlterm/Makefile.in:
	  If executing auto_restart_cmd failed, do execl(BINDIR "/mlterm")
	  instead of execlp("mlterm").

2011-10-16  Araki Ken  <arakiken@users.sf.net>

	* kiklib/kik_conf.[ch]:
	  - kik_conf_new(): No argument.
	  - kik_init_prog(), kik_get_prog_path(): Added.

	* kiklib/Makefile.in: 13.1 => 14.0

	* ml_term_manager.c:
	  - Even if SIGSEGV, SIGABRT, SIGBUS or SIGQUIT is received, all opened ptys
	    survive and are inherited to restarted mlterm, unless "auto_restart" option
	    is "false".

	* mc_combo.c, mc_font.c: gtk_widget_set_size_request(... , 0) ->
	  gtk_widget_set_size_request(... , -1)

	* vte.c:
	  - PROP_VADJUSTMENT property is supported.