@@ -1,5 +1,10 @@
 2011-10-22  Araki Ken  <arakiken@users.sf.net>
 
+	* ml_pty_ssh.c: Not *env but kik_str_alloca_dup( *env) is used in
+	  overwriting its memory to separate it to key and value.
+
+2011-10-22  Araki Ken  <arakiken@users.sf.net>
+
 	* ml_pty.c: Minor fixes for win32 native.
 
 2011-10-21  Araki Ken  <arakiken@users.sf.net>
